# pyconnector

./: .gitignore  README.md  build.sh  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml
connectpy/databricks/: odbc_connector.py
connectpy/postgres/: jdbc_connector.py  odbc_connector.py
docs/: google.md
pyconnector/mysql/: connector.py
